# iNfOflag

./: CMakeLists.txt  README.md  crediblesources.cpp  crediblesources.h  crediblesources.ui  flagWordsFile  flagresponse.cpp  flagresponse.h  flagsraised.cpp  flagsraised.h  flagsraised.ui  flagwords.cpp  flagwords.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pastscans.cpp  pastscans.h  pastscans.ui  resources.qrc
